src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> body
Rule 2     empty -> <empty>
Rule 3     body -> optional_class_declaration_list optional_variables_declaration_list optional_functions_declaration_list statement_list
Rule 4     optional_class_declaration_list -> empty
Rule 5     optional_class_declaration_list -> class_declaration_list
Rule 6     class_declaration_list -> class_declaration
Rule 7     class_declaration_list -> class_declaration class_declaration_list
Rule 8     class_declaration -> CLASS IDENT LCURL variables_declaration_list RCURL
Rule 9     optional_variables_declaration_list -> empty
Rule 10    optional_variables_declaration_list -> variables_declaration_list
Rule 11    variables_declaration_list -> VAR variable_type variables_list SEMICOLON
Rule 12    variables_declaration_list -> VAR variable_type variables_list SEMICOLON variables_declaration_list
Rule 13    variable_type -> _BOOL
Rule 14    variable_type -> _INT
Rule 15    variable_type -> NULL
Rule 16    variable_type -> IDENT
Rule 17    variable_type -> variable_type LBRAC RBRAC
Rule 18    variables_list -> IDENT
Rule 19    variables_list -> IDENT COMMA variables_list
Rule 20    optional_functions_declaration_list -> empty
Rule 21    optional_functions_declaration_list -> functions_declaration_list
Rule 22    functions_declaration_list -> function
Rule 23    functions_declaration_list -> function functions_declaration_list
Rule 24    function -> FUNCTION variable_type IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL
Rule 25    optional_parameter_list -> empty
Rule 26    optional_parameter_list -> parameter_list
Rule 27    parameter_list -> variable_type IDENT
Rule 28    parameter_list -> variable_type IDENT COMMA parameter_list
Rule 29    statement -> statement_return
Rule 30    statement -> statement_print
Rule 31    statement -> statement_assignment
Rule 32    statement -> statement_ifthenelse
Rule 33    statement -> statement_ifthen
Rule 34    statement -> statement_while
Rule 35    statement -> statement_compound
Rule 36    statement -> statement_break
Rule 37    statement -> statement_expression
Rule 38    statement_return -> RETURN expression SEMICOLON
Rule 39    statement_print -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 40    statement_assignment -> variable ASSIGN expression SEMICOLON
Rule 41    variable -> IDENT
Rule 42    variable -> expression DOT IDENT
Rule 43    statement_ifthenelse -> IF LPAREN expression RPAREN statement ELSE statement
Rule 44    statement_ifthen -> IF LPAREN expression RPAREN statement
Rule 45    statement_while -> WHILE LPAREN expression RPAREN statement
Rule 46    statement_break -> BREAK SEMICOLON
Rule 47    statement_expression -> expression SEMICOLON
Rule 48    statement_compound -> LCURL body RCURL
Rule 49    statement_list -> statement
Rule 50    statement_list -> statement statement_list
Rule 51    expression -> expression_integer
Rule 52    expression -> expression_boolean
Rule 53    expression -> expression_identifier
Rule 54    expression -> expression_call
Rule 55    expression -> expression_binop
Rule 56    expression -> expression_group
Rule 57    expression -> expression_neg
Rule 58    expression -> expression_new
Rule 59    expression -> expression_index
Rule 60    expression_integer -> INT
Rule 61    expression_boolean -> BOOL
Rule 62    expression_neg -> NOT expression
Rule 63    expression_identifier -> variable
Rule 64    expression_call -> IDENT LPAREN optional_expression_list RPAREN
Rule 65    expression_binop -> expression PLUS expression
Rule 66    expression_binop -> expression MINUS expression
Rule 67    expression_binop -> expression MULTIPLY expression
Rule 68    expression_binop -> expression DIVIDE expression
Rule 69    expression_binop -> expression MODULO expression
Rule 70    expression_binop -> expression EQ expression
Rule 71    expression_binop -> expression NEQ expression
Rule 72    expression_binop -> expression LT expression
Rule 73    expression_binop -> expression GT expression
Rule 74    expression_binop -> expression LTE expression
Rule 75    expression_binop -> expression GTE expression
Rule 76    expression_binop -> expression AND expression
Rule 77    expression_binop -> expression OR expression
Rule 78    expression_group -> LPAREN expression RPAREN
Rule 79    optional_expression_list -> empty
Rule 80    optional_expression_list -> expression_list
Rule 81    expression_new -> NEW variable_type
Rule 82    expression_index -> expression LBRAC expression RBRAC
Rule 83    expression_list -> expression
Rule 84    expression_list -> expression COMMA expression_list

Terminals, with rules where they appear

AND                  : 76
ASSIGN               : 40
BOOL                 : 61
BREAK                : 46
CLASS                : 8
COMMA                : 19 28 84
DIVIDE               : 68
DOT                  : 42
ELSE                 : 43
EQ                   : 70
FUNCTION             : 24
GT                   : 73
GTE                  : 75
IDENT                : 8 16 18 19 24 27 28 41 42 64
IF                   : 43 44
INT                  : 60
LBRAC                : 17 82
LCURL                : 8 24 48
LPAREN               : 24 39 43 44 45 64 78
LT                   : 72
LTE                  : 74
MINUS                : 66
MODULO               : 69
MULTIPLY             : 67
NEQ                  : 71
NEW                  : 81
NOT                  : 62
NULL                 : 15
OR                   : 77
PLUS                 : 65
PRINT                : 39
RBRAC                : 17 82
RCURL                : 8 24 48
RETURN               : 38
RPAREN               : 24 39 43 44 45 64 78
SEMICOLON            : 11 12 38 39 40 46 47
VAR                  : 11 12
WHILE                : 45
_BOOL                : 13
_INT                 : 14
error                : 

Nonterminals, with rules where they appear

body                 : 1 24 48
class_declaration    : 6 7
class_declaration_list : 5 7
empty                : 4 9 20 25 79
expression           : 38 39 40 42 43 44 45 47 62 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 82 82 83 84
expression_binop     : 55
expression_boolean   : 52
expression_call      : 54
expression_group     : 56
expression_identifier : 53
expression_index     : 59
expression_integer   : 51
expression_list      : 80 84
expression_neg       : 57
expression_new       : 58
function             : 22 23
functions_declaration_list : 21 23
optional_class_declaration_list : 3
optional_expression_list : 64
optional_functions_declaration_list : 3
optional_parameter_list : 24
optional_variables_declaration_list : 3
parameter_list       : 26 28
program              : 0
statement            : 43 43 44 45 49 50
statement_assignment : 31
statement_break      : 36
statement_compound   : 35
statement_expression : 37
statement_ifthen     : 33
statement_ifthenelse : 32
statement_list       : 3 50
statement_print      : 30
statement_return     : 29
statement_while      : 34
variable             : 40 63
variable_type        : 11 12 17 24 27 28 81
variables_declaration_list : 8 10 12
variables_list       : 11 12 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . body
    (3) body -> . optional_class_declaration_list optional_variables_declaration_list optional_functions_declaration_list statement_list
    (4) optional_class_declaration_list -> . empty
    (5) optional_class_declaration_list -> . class_declaration_list
    (2) empty -> .
    (6) class_declaration_list -> . class_declaration
    (7) class_declaration_list -> . class_declaration class_declaration_list
    (8) class_declaration -> . CLASS IDENT LCURL variables_declaration_list RCURL

    VAR             reduce using rule 2 (empty -> .)
    FUNCTION        reduce using rule 2 (empty -> .)
    RETURN          reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    WHILE           reduce using rule 2 (empty -> .)
    LCURL           reduce using rule 2 (empty -> .)
    BREAK           reduce using rule 2 (empty -> .)
    IDENT           reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    BOOL            reduce using rule 2 (empty -> .)
    LPAREN          reduce using rule 2 (empty -> .)
    NOT             reduce using rule 2 (empty -> .)
    NEW             reduce using rule 2 (empty -> .)
    CLASS           shift and go to state 7

    program                        shift and go to state 1
    body                           shift and go to state 2
    optional_class_declaration_list shift and go to state 3
    empty                          shift and go to state 4
    class_declaration_list         shift and go to state 5
    class_declaration              shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> body .

    $end            reduce using rule 1 (program -> body .)


state 3

    (3) body -> optional_class_declaration_list . optional_variables_declaration_list optional_functions_declaration_list statement_list
    (9) optional_variables_declaration_list -> . empty
    (10) optional_variables_declaration_list -> . variables_declaration_list
    (2) empty -> .
    (11) variables_declaration_list -> . VAR variable_type variables_list SEMICOLON
    (12) variables_declaration_list -> . VAR variable_type variables_list SEMICOLON variables_declaration_list

    FUNCTION        reduce using rule 2 (empty -> .)
    RETURN          reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    WHILE           reduce using rule 2 (empty -> .)
    LCURL           reduce using rule 2 (empty -> .)
    BREAK           reduce using rule 2 (empty -> .)
    IDENT           reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    BOOL            reduce using rule 2 (empty -> .)
    LPAREN          reduce using rule 2 (empty -> .)
    NOT             reduce using rule 2 (empty -> .)
    NEW             reduce using rule 2 (empty -> .)
    VAR             shift and go to state 11

    optional_variables_declaration_list shift and go to state 8
    empty                          shift and go to state 9
    variables_declaration_list     shift and go to state 10

state 4

    (4) optional_class_declaration_list -> empty .

    VAR             reduce using rule 4 (optional_class_declaration_list -> empty .)
    FUNCTION        reduce using rule 4 (optional_class_declaration_list -> empty .)
    RETURN          reduce using rule 4 (optional_class_declaration_list -> empty .)
    PRINT           reduce using rule 4 (optional_class_declaration_list -> empty .)
    IF              reduce using rule 4 (optional_class_declaration_list -> empty .)
    WHILE           reduce using rule 4 (optional_class_declaration_list -> empty .)
    LCURL           reduce using rule 4 (optional_class_declaration_list -> empty .)
    BREAK           reduce using rule 4 (optional_class_declaration_list -> empty .)
    IDENT           reduce using rule 4 (optional_class_declaration_list -> empty .)
    INT             reduce using rule 4 (optional_class_declaration_list -> empty .)
    BOOL            reduce using rule 4 (optional_class_declaration_list -> empty .)
    LPAREN          reduce using rule 4 (optional_class_declaration_list -> empty .)
    NOT             reduce using rule 4 (optional_class_declaration_list -> empty .)
    NEW             reduce using rule 4 (optional_class_declaration_list -> empty .)


state 5

    (5) optional_class_declaration_list -> class_declaration_list .

    VAR             reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    FUNCTION        reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    RETURN          reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    PRINT           reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    IF              reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    WHILE           reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    LCURL           reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    BREAK           reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    IDENT           reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    INT             reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    BOOL            reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    LPAREN          reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    NOT             reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)
    NEW             reduce using rule 5 (optional_class_declaration_list -> class_declaration_list .)


state 6

    (6) class_declaration_list -> class_declaration .
    (7) class_declaration_list -> class_declaration . class_declaration_list
    (6) class_declaration_list -> . class_declaration
    (7) class_declaration_list -> . class_declaration class_declaration_list
    (8) class_declaration -> . CLASS IDENT LCURL variables_declaration_list RCURL

    VAR             reduce using rule 6 (class_declaration_list -> class_declaration .)
    FUNCTION        reduce using rule 6 (class_declaration_list -> class_declaration .)
    RETURN          reduce using rule 6 (class_declaration_list -> class_declaration .)
    PRINT           reduce using rule 6 (class_declaration_list -> class_declaration .)
    IF              reduce using rule 6 (class_declaration_list -> class_declaration .)
    WHILE           reduce using rule 6 (class_declaration_list -> class_declaration .)
    LCURL           reduce using rule 6 (class_declaration_list -> class_declaration .)
    BREAK           reduce using rule 6 (class_declaration_list -> class_declaration .)
    IDENT           reduce using rule 6 (class_declaration_list -> class_declaration .)
    INT             reduce using rule 6 (class_declaration_list -> class_declaration .)
    BOOL            reduce using rule 6 (class_declaration_list -> class_declaration .)
    LPAREN          reduce using rule 6 (class_declaration_list -> class_declaration .)
    NOT             reduce using rule 6 (class_declaration_list -> class_declaration .)
    NEW             reduce using rule 6 (class_declaration_list -> class_declaration .)
    CLASS           shift and go to state 7

    class_declaration              shift and go to state 6
    class_declaration_list         shift and go to state 12

state 7

    (8) class_declaration -> CLASS . IDENT LCURL variables_declaration_list RCURL

    IDENT           shift and go to state 13


state 8

    (3) body -> optional_class_declaration_list optional_variables_declaration_list . optional_functions_declaration_list statement_list
    (20) optional_functions_declaration_list -> . empty
    (21) optional_functions_declaration_list -> . functions_declaration_list
    (2) empty -> .
    (22) functions_declaration_list -> . function
    (23) functions_declaration_list -> . function functions_declaration_list
    (24) function -> . FUNCTION variable_type IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    RETURN          reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    WHILE           reduce using rule 2 (empty -> .)
    LCURL           reduce using rule 2 (empty -> .)
    BREAK           reduce using rule 2 (empty -> .)
    IDENT           reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    BOOL            reduce using rule 2 (empty -> .)
    LPAREN          reduce using rule 2 (empty -> .)
    NOT             reduce using rule 2 (empty -> .)
    NEW             reduce using rule 2 (empty -> .)
    FUNCTION        shift and go to state 18

    optional_functions_declaration_list shift and go to state 14
    empty                          shift and go to state 15
    functions_declaration_list     shift and go to state 16
    function                       shift and go to state 17

state 9

    (9) optional_variables_declaration_list -> empty .

    FUNCTION        reduce using rule 9 (optional_variables_declaration_list -> empty .)
    RETURN          reduce using rule 9 (optional_variables_declaration_list -> empty .)
    PRINT           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    IF              reduce using rule 9 (optional_variables_declaration_list -> empty .)
    WHILE           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    LCURL           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    BREAK           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    IDENT           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    INT             reduce using rule 9 (optional_variables_declaration_list -> empty .)
    BOOL            reduce using rule 9 (optional_variables_declaration_list -> empty .)
    LPAREN          reduce using rule 9 (optional_variables_declaration_list -> empty .)
    NOT             reduce using rule 9 (optional_variables_declaration_list -> empty .)
    NEW             reduce using rule 9 (optional_variables_declaration_list -> empty .)


state 10

    (10) optional_variables_declaration_list -> variables_declaration_list .

    FUNCTION        reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    RETURN          reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    PRINT           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    IF              reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    WHILE           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    LCURL           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    BREAK           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    IDENT           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    INT             reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    BOOL            reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    LPAREN          reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    NOT             reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    NEW             reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)


state 11

    (11) variables_declaration_list -> VAR . variable_type variables_list SEMICOLON
    (12) variables_declaration_list -> VAR . variable_type variables_list SEMICOLON variables_declaration_list
    (13) variable_type -> . _BOOL
    (14) variable_type -> . _INT
    (15) variable_type -> . NULL
    (16) variable_type -> . IDENT
    (17) variable_type -> . variable_type LBRAC RBRAC

    _BOOL           shift and go to state 20
    _INT            shift and go to state 21
    NULL            shift and go to state 22
    IDENT           shift and go to state 23

    variable_type                  shift and go to state 19

state 12

    (7) class_declaration_list -> class_declaration class_declaration_list .

    VAR             reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    FUNCTION        reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    RETURN          reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    PRINT           reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    IF              reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    WHILE           reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    LCURL           reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    BREAK           reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    IDENT           reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    INT             reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    BOOL            reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    LPAREN          reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    NOT             reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)
    NEW             reduce using rule 7 (class_declaration_list -> class_declaration class_declaration_list .)


state 13

    (8) class_declaration -> CLASS IDENT . LCURL variables_declaration_list RCURL

    LCURL           shift and go to state 24


state 14

    (3) body -> optional_class_declaration_list optional_variables_declaration_list optional_functions_declaration_list . statement_list
    (49) statement_list -> . statement
    (50) statement_list -> . statement statement_list
    (29) statement -> . statement_return
    (30) statement -> . statement_print
    (31) statement -> . statement_assignment
    (32) statement -> . statement_ifthenelse
    (33) statement -> . statement_ifthen
    (34) statement -> . statement_while
    (35) statement -> . statement_compound
    (36) statement -> . statement_break
    (37) statement -> . statement_expression
    (38) statement_return -> . RETURN expression SEMICOLON
    (39) statement_print -> . PRINT LPAREN expression RPAREN SEMICOLON
    (40) statement_assignment -> . variable ASSIGN expression SEMICOLON
    (43) statement_ifthenelse -> . IF LPAREN expression RPAREN statement ELSE statement
    (44) statement_ifthen -> . IF LPAREN expression RPAREN statement
    (45) statement_while -> . WHILE LPAREN expression RPAREN statement
    (48) statement_compound -> . LCURL body RCURL
    (46) statement_break -> . BREAK SEMICOLON
    (47) statement_expression -> . expression SEMICOLON
    (41) variable -> . IDENT
    (42) variable -> . expression DOT IDENT
    (51) expression -> . expression_integer
    (52) expression -> . expression_boolean
    (53) expression -> . expression_identifier
    (54) expression -> . expression_call
    (55) expression -> . expression_binop
    (56) expression -> . expression_group
    (57) expression -> . expression_neg
    (58) expression -> . expression_new
    (59) expression -> . expression_index
    (60) expression_integer -> . INT
    (61) expression_boolean -> . BOOL
    (63) expression_identifier -> . variable
    (64) expression_call -> . IDENT LPAREN optional_expression_list RPAREN
    (65) expression_binop -> . expression PLUS expression
    (66) expression_binop -> . expression MINUS expression
    (67) expression_binop -> . expression MULTIPLY expression
    (68) expression_binop -> . expression DIVIDE expression
    (69) expression_binop -> . expression MODULO expression
    (70) expression_binop -> . expression EQ expression
    (71) expression_binop -> . expression NEQ expression
    (72) expression_binop -> . expression LT expression
    (73) expression_binop -> . expression GT expression
    (74) expression_binop -> . expression LTE expression
    (75) expression_binop -> . expression GTE expression
    (76) expression_binop -> . expression AND expression
    (77) expression_binop -> . expression OR expression
    (78) expression_group -> . LPAREN expression RPAREN
    (62) expression_neg -> . NOT expression
    (81) expression_new -> . NEW variable_type
    (82) expression_index -> . expression LBRAC expression RBRAC

    RETURN          shift and go to state 36
    PRINT           shift and go to state 38
    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LCURL           shift and go to state 43
    BREAK           shift and go to state 44
    IDENT           shift and go to state 45
    INT             shift and go to state 55
    BOOL            shift and go to state 56
    LPAREN          shift and go to state 39
    NOT             shift and go to state 57
    NEW             shift and go to state 58

    statement_list                 shift and go to state 25
    statement                      shift and go to state 26
    statement_return               shift and go to state 27
    statement_print                shift and go to state 28
    statement_assignment           shift and go to state 29
    statement_ifthenelse           shift and go to state 30
    statement_ifthen               shift and go to state 31
    statement_while                shift and go to state 32
    statement_compound             shift and go to state 33
    statement_break                shift and go to state 34
    statement_expression           shift and go to state 35
    expression                     shift and go to state 37
    variable                       shift and go to state 40
    expression_integer             shift and go to state 46
    expression_boolean             shift and go to state 47
    expression_identifier          shift and go to state 48
    expression_call                shift and go to state 49
    expression_binop               shift and go to state 50
    expression_group               shift and go to state 51
    expression_neg                 shift and go to state 52
    expression_new                 shift and go to state 53
    expression_index               shift and go to state 54

state 15

    (20) optional_functions_declaration_list -> empty .

    RETURN          reduce using rule 20 (optional_functions_declaration_list -> empty .)
    PRINT           reduce using rule 20 (optional_functions_declaration_list -> empty .)
    IF              reduce using rule 20 (optional_functions_declaration_list -> empty .)
    WHILE           reduce using rule 20 (optional_functions_declaration_list -> empty .)
    LCURL           reduce using rule 20 (optional_functions_declaration_list -> empty .)
    BREAK           reduce using rule 20 (optional_functions_declaration_list -> empty .)
    IDENT           reduce using rule 20 (optional_functions_declaration_list -> empty .)
    INT             reduce using rule 20 (optional_functions_declaration_list -> empty .)
    BOOL            reduce using rule 20 (optional_functions_declaration_list -> empty .)
    LPAREN          reduce using rule 20 (optional_functions_declaration_list -> empty .)
    NOT             reduce using rule 20 (optional_functions_declaration_list -> empty .)
    NEW             reduce using rule 20 (optional_functions_declaration_list -> empty .)


state 16

    (21) optional_functions_declaration_list -> functions_declaration_list .

    RETURN          reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    PRINT           reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    IF              reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    WHILE           reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    LCURL           reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    BREAK           reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    IDENT           reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    INT             reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    BOOL            reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    LPAREN          reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    NOT             reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)
    NEW             reduce using rule 21 (optional_functions_declaration_list -> functions_declaration_list .)


state 17

    (22) functions_declaration_list -> function .
    (23) functions_declaration_list -> function . functions_declaration_list
    (22) functions_declaration_list -> . function
    (23) functions_declaration_list -> . function functions_declaration_list
    (24) function -> . FUNCTION variable_type IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    RETURN          reduce using rule 22 (functions_declaration_list -> function .)
    PRINT           reduce using rule 22 (functions_declaration_list -> function .)
    IF              reduce using rule 22 (functions_declaration_list -> function .)
    WHILE           reduce using rule 22 (functions_declaration_list -> function .)
    LCURL           reduce using rule 22 (functions_declaration_list -> function .)
    BREAK           reduce using rule 22 (functions_declaration_list -> function .)
    IDENT           reduce using rule 22 (functions_declaration_list -> function .)
    INT             reduce using rule 22 (functions_declaration_list -> function .)
    BOOL            reduce using rule 22 (functions_declaration_list -> function .)
    LPAREN          reduce using rule 22 (functions_declaration_list -> function .)
    NOT             reduce using rule 22 (functions_declaration_list -> function .)
    NEW             reduce using rule 22 (functions_declaration_list -> function .)
    FUNCTION        shift and go to state 18

    function                       shift and go to state 17
    functions_declaration_list     shift and go to state 59

state 18

    (24) function -> FUNCTION . variable_type IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL
    (13) variable_type -> . _BOOL
    (14) variable_type -> . _INT
    (15) variable_type -> . NULL
    (16) variable_type -> . IDENT
    (17) variable_type -> . variable_type LBRAC RBRAC

    _BOOL           shift and go to state 20
    _INT            shift and go to state 21
    NULL            shift and go to state 22
    IDENT           shift and go to state 23

    variable_type                  shift and go to state 60

state 19

    (11) variables_declaration_list -> VAR variable_type . variables_list SEMICOLON
    (12) variables_declaration_list -> VAR variable_type . variables_list SEMICOLON variables_declaration_list
    (17) variable_type -> variable_type . LBRAC RBRAC
    (18) variables_list -> . IDENT
    (19) variables_list -> . IDENT COMMA variables_list

    LBRAC           shift and go to state 62
    IDENT           shift and go to state 63

    variables_list                 shift and go to state 61

state 20

    (13) variable_type -> _BOOL .

    LBRAC           reduce using rule 13 (variable_type -> _BOOL .)
    IDENT           reduce using rule 13 (variable_type -> _BOOL .)
    SEMICOLON       reduce using rule 13 (variable_type -> _BOOL .)
    DOT             reduce using rule 13 (variable_type -> _BOOL .)
    PLUS            reduce using rule 13 (variable_type -> _BOOL .)
    MINUS           reduce using rule 13 (variable_type -> _BOOL .)
    MULTIPLY        reduce using rule 13 (variable_type -> _BOOL .)
    DIVIDE          reduce using rule 13 (variable_type -> _BOOL .)
    MODULO          reduce using rule 13 (variable_type -> _BOOL .)
    EQ              reduce using rule 13 (variable_type -> _BOOL .)
    NEQ             reduce using rule 13 (variable_type -> _BOOL .)
    LT              reduce using rule 13 (variable_type -> _BOOL .)
    GT              reduce using rule 13 (variable_type -> _BOOL .)
    LTE             reduce using rule 13 (variable_type -> _BOOL .)
    GTE             reduce using rule 13 (variable_type -> _BOOL .)
    AND             reduce using rule 13 (variable_type -> _BOOL .)
    OR              reduce using rule 13 (variable_type -> _BOOL .)
    RPAREN          reduce using rule 13 (variable_type -> _BOOL .)
    RBRAC           reduce using rule 13 (variable_type -> _BOOL .)
    COMMA           reduce using rule 13 (variable_type -> _BOOL .)


state 21

    (14) variable_type -> _INT .

    LBRAC           reduce using rule 14 (variable_type -> _INT .)
    IDENT           reduce using rule 14 (variable_type -> _INT .)
    SEMICOLON       reduce using rule 14 (variable_type -> _INT .)
    DOT             reduce using rule 14 (variable_type -> _INT .)
    PLUS            reduce using rule 14 (variable_type -> _INT .)
    MINUS           reduce using rule 14 (variable_type -> _INT .)
    MULTIPLY        reduce using rule 14 (variable_type -> _INT .)
    DIVIDE          reduce using rule 14 (variable_type -> _INT .)
    MODULO          reduce using rule 14 (variable_type -> _INT .)
    EQ              reduce using rule 14 (variable_type -> _INT .)
    NEQ             reduce using rule 14 (variable_type -> _INT .)
    LT              reduce using rule 14 (variable_type -> _INT .)
    GT              reduce using rule 14 (variable_type -> _INT .)
    LTE             reduce using rule 14 (variable_type -> _INT .)
    GTE             reduce using rule 14 (variable_type -> _INT .)
    AND             reduce using rule 14 (variable_type -> _INT .)
    OR              reduce using rule 14 (variable_type -> _INT .)
    RPAREN          reduce using rule 14 (variable_type -> _INT .)
    RBRAC           reduce using rule 14 (variable_type -> _INT .)
    COMMA           reduce using rule 14 (variable_type -> _INT .)


state 22

    (15) variable_type -> NULL .

    LBRAC           reduce using rule 15 (variable_type -> NULL .)
    IDENT           reduce using rule 15 (variable_type -> NULL .)
    SEMICOLON       reduce using rule 15 (variable_type -> NULL .)
    DOT             reduce using rule 15 (variable_type -> NULL .)
    PLUS            reduce using rule 15 (variable_type -> NULL .)
    MINUS           reduce using rule 15 (variable_type -> NULL .)
    MULTIPLY        reduce using rule 15 (variable_type -> NULL .)
    DIVIDE          reduce using rule 15 (variable_type -> NULL .)
    MODULO          reduce using rule 15 (variable_type -> NULL .)
    EQ              reduce using rule 15 (variable_type -> NULL .)
    NEQ             reduce using rule 15 (variable_type -> NULL .)
    LT              reduce using rule 15 (variable_type -> NULL .)
    GT              reduce using rule 15 (variable_type -> NULL .)
    LTE             reduce using rule 15 (variable_type -> NULL .)
    GTE             reduce using rule 15 (variable_type -> NULL .)
    AND             reduce using rule 15 (variable_type -> NULL .)
    OR              reduce using rule 15 (variable_type -> NULL .)
    RPAREN          reduce using rule 15 (variable_type -> NULL .)
    RBRAC           reduce using rule 15 (variable_type -> NULL .)
    COMMA           reduce using rule 15 (variable_type -> NULL .)


state 23

    (16) variable_type -> IDENT .

    LBRAC           reduce using rule 16 (variable_type -> IDENT .)
    IDENT           reduce using rule 16 (variable_type -> IDENT .)
    SEMICOLON       reduce using rule 16 (variable_type -> IDENT .)
    DOT             reduce using rule 16 (variable_type -> IDENT .)
    PLUS            reduce using rule 16 (variable_type -> IDENT .)
    MINUS           reduce using rule 16 (variable_type -> IDENT .)
    MULTIPLY        reduce using rule 16 (variable_type -> IDENT .)
    DIVIDE          reduce using rule 16 (variable_type -> IDENT .)
    MODULO          reduce using rule 16 (variable_type -> IDENT .)
    EQ              reduce using rule 16 (variable_type -> IDENT .)
    NEQ             reduce using rule 16 (variable_type -> IDENT .)
    LT              reduce using rule 16 (variable_type -> IDENT .)
    GT              reduce using rule 16 (variable_type -> IDENT .)
    LTE             reduce using rule 16 (variable_type -> IDENT .)
    GTE             reduce using rule 16 (variable_type -> IDENT .)
    AND             reduce using rule 16 (variable_type -> IDENT .)
    OR              reduce using rule 16 (variable_type -> IDENT .)
    RPAREN          reduce using rule 16 (variable_type -> IDENT .)
    RBRAC           reduce using rule 16 (variable_type -> IDENT .)
    COMMA           reduce using rule 16 (variable_type -> IDENT .)


state 24

    (8) class_declaration -> CLASS IDENT LCURL . variables_declaration_list RCURL
    (11) variables_declaration_list -> . VAR variable_type variables_list SEMICOLON
    (12) variables_declaration_list -> . VAR variable_type variables_list SEMICOLON variables_declaration_list

    VAR             shift and go to state 11

    variables_declaration_list     shift and go to state 64

state 25

    (3) body -> optional_class_declaration_list optional_variables_declaration_list optional_functions_declaration_list statement_list .

    $end            reduce using rule 3 (body -> optional_class_declaration_list optional_variables_declaration_list optional_functions_declaration_list statement_list .)
    RCURL           reduce using rule 3 (body -> optional_class_declaration_list optional_variables_declaration_list optional_functions_declaration_list statement_list .)


state 26
